# generador-assets-inmobiliarios

./: .gitignore  Descarga_fotos_propiedades.py  app.py  biblioteca_recursos.txt  config.py  descarga_logos_inmobiliarias.py  generador_csv_after_effects.py  generador_prompts_publicaciones.py  google_drive_manager.py  instrucciones_creacion_plantillas.md  lista_temas_inmobiliarios.txt  main.py  manual_de_reglas_visuales.txt  manual_reglas_visuales_propiedades.txt  mis_plantillas.py  plantillas_carruseles_inmobiliarias.py  plantillas_educativas.py  preview_plantillas.py  pyproject.toml  recursos_graficos.py  requirements.txt  selector_carruseles_a_publicar.py  system_prompt_disenio_carrusel_individual.txt  system_prompt_disenio_carrusel_panoramico.txt  test_drive.py  utils.py
data/: CSV_After_Effects.csv  Inmobiliarias_activas.csv  Inmobiliarias_conectadas.csv  Script-adobe (1).jsx  descarga_logos_inmobiliarias.csv  inmobiliarias_activas_en_metricool_2026-07-06T17_19_53.984471848-06_00.csv  propiedades_1_5_10_con_fotos_2026-06-26T20_14_18.292678-06_00.csv  toppropiedades_inmobiliarias_metricool_2026-07-06T17_13_08.11703102-06_00.csv
pages/: 1_Carruseles_Educativos.py  2_Automatizacion_Metricool.py
