[project]
name = "generador-assets-inmobiliarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "html2image>=2.0.7",
    "pandas>=3.0.4",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "disenios_generados",
]
