[project]
name = "generador-assets-inmobiliarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "html2image>=2.0.7",
    "openai>=2.44.0",
    "pandas>=3.0.4",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uv>=0.11.28",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "disenios_generados",
]
